--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "author": "victor-993, ALDE308",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "phaser": "^3.23.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2"
   }
 }
