--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "start": "node servidor.js",
-    "dev": "nodemon Servidor.js"
+    "start": "",
+    "dev": "webpack-dev-server --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,13 +18,13 @@
   ],
   "author": "victor-993, ALDE308",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.3",
-    "phaser": "^3.23.0"
-  },
   "devDependencies": {
-    "nodemon": "^2.0.15",
     "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0"
   }
 }
